<resources>
    <string name="app_name">Fizz Buzz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prints_the_numbers">Prints the numbers from %1$d to %2$d.</string>
    <string name="replace_the_numbers">For multiples of %1$d print “%2$s”.\nFor multiples of %3$d print “%4$s”.\nFor multiples of both %5$d and %6$d print “%7$s%8$s”.</string>
    <string name="label_lower_limit">Lower limit</string>
    <string name="label_upper_limit">Upper limit</string>
    <string name="label_number_1">Number</string>
    <string name="label_word_1">Word</string>
    <string name="label_number_2">Number</string>
    <string name="label_word_2">Word</string>
    <string name="submit">Submit</string>
    <string name="input_field_error_required">Required</string>
    <string name="input_field_error_not_integer">Not an integer</string>
    <string name="input_field_error_lower_than">Must be greater then %1$d</string>
</resources>