<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.HomeFragment"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/card_inputs"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/label_input_limits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/prints_the_numbers"
                />

            <TextView
                android:id="@+id/label_input_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_limit"
                tools:text="@string/replace_the_numbers"
                />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:divider="@drawable/space_8dp"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:showDividers="middle"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_lower_limit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@id/input_layout_upper_limit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_first_page_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_lower_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_lower_limit"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusForward="@id/input_upper_limit"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_upper_limit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/input_layout_lower_limit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_last_page_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_upper_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_upper_limit"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusForward="@id/input_number_one"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="input_layout_lower_limit,input_layout_upper_limit"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_number_one"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@id/input_layout_word_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier_limit"
                    app:startIconDrawable="@drawable/ic_baseline_looks_one_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_number_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_number_1"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusForward="@id/input_word_one"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_word_one"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/input_layout_number_one"
                    app:layout_constraintTop_toBottomOf="@id/barrier_limit"
                    app:startIconDrawable="@drawable/ic_baseline_label_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_word_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_word_1"
                        android:imeOptions="actionNext"
                        android:inputType="text|textCapWords"
                        android:maxLines="1"
                        android:nextFocusForward="@id/input_layout_number_two"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="input_layout_number_one,input_layout_word_one"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_number_two"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@id/input_layout_word_two"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier_one"
                    app:startIconDrawable="@drawable/ic_baseline_looks_two_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_number_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_number_2"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusForward="@id/input_word_two"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_word_two"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/input_layout_number_two"
                    app:layout_constraintTop_toBottomOf="@id/barrier_one"
                    app:startIconDrawable="@drawable/ic_baseline_label_24dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_word_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_word_2"
                        android:imeOptions="actionDone"
                        android:inputType="text|textCapWords"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="input_layout_number_two,input_layout_word_two"
                    />

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit"
                    app:layout_constraintTop_toBottomOf="@id/barrier_two"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/card_inputs"
        app:layout_constraintTop_toTopOf="@id/card_inputs"
        />

</androidx.constraintlayout.widget.ConstraintLayout>